# EasyScreenCapturer

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
src/: CaptureStatusCode.h  EasyScreenCaptureFaker.h  EasyScreenCapturer.cpp  EasyScreenCapturer.h  EasyScreenCapturerFaker.h  EasyScreenCapturerLinux.cpp  EasyScreenCapturerLinux.h  EasyScreenCapturerWin.cpp  EasyScreenCapturerWin.h
test/: demo.cpp
